@@ -1,5 +1,19 @@
 package org.trd.app.teknichrono.rest;
 
+import jakarta.inject.Inject;
+import jakarta.transaction.Transactional;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.DELETE;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.PUT;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.QueryParam;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.Status;
 import org.jboss.logging.Logger;
 import org.trd.app.teknichrono.business.client.SessionManagement;
 import org.trd.app.teknichrono.business.client.SessionSelector;
@@ -14,22 +28,7 @@ import org.trd.app.teknichrono.util.DurationLogger;
 import org.trd.app.teknichrono.util.exception.ConflictingIdException;
 import org.trd.app.teknichrono.util.exception.NotFoundException;
 
-import javax.inject.Inject;
-import javax.transaction.Transactional;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.DELETE;
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.Response.Status;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Path("/sessions")
 public class SessionEndpoint {
@@ -116,7 +115,7 @@ public class SessionEndpoint {
   @Transactional
   public Response findCurrent() {
     try (DurationLogger perf = DurationLogger.get(LOGGER).start("Find current session")) {
-      List<Session> allSessions = sessionRepository.findAll(null, null).collect(Collectors.toList());
+      List<Session> allSessions = sessionRepository.findAll(null, null).toList();
       SessionSelector selector = new SessionSelector();
       Session session = selector.pickMostRelevantCurrent(allSessions);
       if (session == null) {
